[package]
name = "gawr"
version = "0.9.0"
authors = ["Nicolas Mémeint <nicomem@pm.me>"]
repository = "https://github.com/nicomem/gawr"
edition = "2021"
include = ["src/**/*", "CHANGELOG.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
clap = { version = "3.1.2", features = ["cargo", "derive", "env"] }
crossbeam-channel = "0.5.2"
dotenv = "0.15.0"
fastrand = "1.7.0"
heck = "0.4.0"
miette = { version = "5.1.1", features = ["fancy"] }
once_cell = "1.9.0"
owo-colors = "3.3.0"
regex = "1.5.4"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde_json = "1.0.78"
tempfile = "3.3.0"
time = { version = "0.3.9", features = ["local-offset"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.10", features = ["time"] }

[features]

[profile.release]
strip = true
opt-level = "z"
