[package]
name = "gawr"
version = "1.0.4"
license = "MIT OR Apache-2.0"
authors = ["Nicolas Mémeint <nicomem@pm.me>"]
repository = "https://github.com/nicomem/gawr"
edition = "2021"
include = ["src/**/*", "CHANGELOG.md"]
description = "An audio archiver tool to create an audio library out of web videos. Download, clip, and normalize audio streams"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
clap = { version = "4.0.8", features = ["cargo"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
crossbeam-channel = "0.5.2"
fastrand = "2.0.1"
heck = "0.5.0"
indoc = "2.0.0"
miette = { version = "7.2.0", features = ["fancy"] }
owo-colors = "4.0.0"
regex = "1.5.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.78"
tempfile = "3.3.0"
time = { version = "0.3.9", features = ["local-offset"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.10", features = ["time"] }

[features]

[profile.release]
strip = true
opt-level = "z"
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.release]
publish = false

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.12.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "skip"
